--- a/Math Behavior Project 1/LPMC_model0.ipynb
+++ b/Math Behavior Project 1/LPMC_model0.ipynb
@@ -28,12 +28,277 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>trip_id</th>\n",
+       "      <th>household_id</th>\n",
+       "      <th>person_n</th>\n",
+       "      <th>trip_n</th>\n",
+       "      <th>travel_mode</th>\n",
+       "      <th>purpose</th>\n",
+       "      <th>fueltype</th>\n",
+       "      <th>faretype</th>\n",
+       "      <th>bus_scale</th>\n",
+       "      <th>survey_year</th>\n",
+       "      <th>...</th>\n",
+       "      <th>dur_pt_int</th>\n",
+       "      <th>pt_interchanges</th>\n",
+       "      <th>dur_driving</th>\n",
+       "      <th>cost_transit</th>\n",
+       "      <th>cost_driving_fuel</th>\n",
+       "      <th>cost_driving_ccharge</th>\n",
+       "      <th>driving_traffic_percent</th>\n",
+       "      <th>dur_public</th>\n",
+       "      <th>cost_public</th>\n",
+       "      <th>cost_driving</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>14991</td>\n",
+       "      <td>3180</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0319</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.124</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56951</td>\n",
+       "      <td>12230</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.321</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46487</td>\n",
+       "      <td>9923</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.153</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.318</td>\n",
+       "      <td>0.435</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13626</td>\n",
+       "      <td>2896</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0858</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>0.302</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>76528</td>\n",
+       "      <td>16553</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.853</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>2.22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.588</td>\n",
+       "      <td>0.768</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>2.22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   trip_id  household_id  person_n  trip_n  travel_mode  purpose  fueltype  \\\n",
+       "0    14991          3180         0       2            1        3         1   \n",
+       "1    56951         12230         0       0            4        1         6   \n",
+       "2    46487          9923         3       1            3        2         6   \n",
+       "3    13626          2896         0       0            4        2         2   \n",
+       "4    76528         16553         2       0            3        5         6   \n",
+       "\n",
+       "   faretype  bus_scale  survey_year  ...  dur_pt_int  pt_interchanges  \\\n",
+       "0         5          0            1  ...           0                0   \n",
+       "1         5          0            3  ...           0                0   \n",
+       "2         3          0            2  ...           0                0   \n",
+       "3         1          1            1  ...           0                0   \n",
+       "4         4          1            3  ...         0.1                1   \n",
+       "\n",
+       "   dur_driving  cost_transit  cost_driving_fuel  cost_driving_ccharge  \\\n",
+       "0       0.0319             0               0.09                     0   \n",
+       "1         0.08             0               0.28                     0   \n",
+       "2        0.153             0                0.4                     0   \n",
+       "3       0.0858           1.5               0.22                     0   \n",
+       "4        0.853           4.1               2.22                     0   \n",
+       "\n",
+       "   driving_traffic_percent  dur_public  cost_public  cost_driving  \n",
+       "0                        0       0.124            0          0.09  \n",
+       "1                    0.135       0.321            0          0.28  \n",
+       "2                    0.318       0.435            0           0.4  \n",
+       "3                    0.055       0.302          1.5          0.22  \n",
+       "4                    0.588       0.768          4.1          2.22  \n",
+       "\n",
+       "[5 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pandas.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['trip_id', 'household_id', 'person_n', 'trip_n', 'travel_mode',\n",
+       "       'purpose', 'fueltype', 'faretype', 'bus_scale', 'survey_year',\n",
+       "       'travel_year', 'travel_month', 'travel_date', 'day_of_week',\n",
+       "       'start_time', 'age', 'female', 'driving_license', 'car_ownership',\n",
+       "       'distance', 'dur_walking', 'dur_cycling', 'dur_pt_access',\n",
+       "       'dur_pt_rail', 'dur_pt_bus', 'dur_pt_int', 'pt_interchanges',\n",
+       "       'dur_driving', 'cost_transit', 'cost_driving_fuel',\n",
+       "       'cost_driving_ccharge', 'driving_traffic_percent', 'dur_public',\n",
+       "       'cost_public', 'cost_driving'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pandas.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Choice\n",
     "chosenAlternative = travel_mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 4, 3, 2])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pandas[\"travel_mode\"].unique()"
    ]
   },
   {
@@ -54,19 +319,19 @@
     "#   3  Lower bound\n",
     "#   4  Upper bound\n",
     "#   5  0: estimate the parameter, 1: keep it fixed\n",
-    "Constant1 = Beta('Constant1',0,None,None,1)\n",
-    "Constant2 = Beta('Constant2',0,None,None,0)\n",
-    "Constant3 = Beta('Constant3',0,None,None,0)\n",
-    "Constant4 = Beta('Constant4',0,None,None,0)\n",
-    "Cost = Beta('Cost',0,None,None,0)\n",
-    "Total_TT = Beta('Total_TT',0,None,None,0)\n",
+    "Constant1 = Beta('Constant1',0, None, None, 1)\n",
+    "Constant2 = Beta('Constant2',0, None, None, 0)\n",
+    "Constant3 = Beta('Constant3',0, None, None, 0)\n",
+    "Constant4 = Beta('Constant4',0, None, None, 0)\n",
+    "Cost = Beta('Cost',0, None, None, 0)\n",
+    "Total_TT = Beta('Total_TT',0, None, None,0)\n",
+    "\n",
     "\n",
     "# Define here arithmetic expressions for name that are not directly\n",
     "# available from the data\n",
-    "\n",
-    "dur_public = DefineVariable('dur_public', dur_pt_access + dur_pt_rail + dur_pt_bus + dur_pt_int ,database)\n",
-    "cost_public = DefineVariable('cost_public', cost_transit ,database)\n",
-    "cost_driving = DefineVariable('cost_driving', cost_driving_fuel + cost_driving_ccharge ,database)\n",
+    "dur_public = DefineVariable('dur_public', dur_pt_access + dur_pt_rail + dur_pt_bus + dur_pt_int, database)\n",
+    "cost_public = DefineVariable('cost_public', cost_transit, database)\n",
+    "cost_driving = DefineVariable('cost_driving', cost_driving_fuel + cost_driving_ccharge, database)\n",
     "\n",
     "\n",
     "# Utilities\n",
@@ -75,13 +340,12 @@
     "#Opt2 = cycling\n",
     "#Opt3 = public transport\n",
     "#Opt4 = driving\n",
-    "\n",
     "Opt1 = Constant1 + Total_TT * dur_walking\n",
     "Opt2 = Constant2 + Total_TT * dur_cycling\n",
     "Opt3 = Constant3 + Cost * cost_public + Total_TT * dur_public\n",
     "Opt4 = Constant4 + Cost * cost_driving + Total_TT * dur_driving\n",
-    "V = {1: Opt1,2: Opt2,3: Opt3,4: Opt4}\n",
-    "av = {1: 1,2: 1,3: 1,4: 1}"
+    "V = {1: Opt1, 2: Opt2, 3: Opt3, 4: Opt4}\n",
+    "av = {1: 1, 2: 1, 3: 1, 4: 1}"
    ]
   },
   {
@@ -116,10 +380,11 @@
    ],
    "source": [
     "# The choice model is a logit, with availability conditions\n",
-    "logprob = loglogit(V,av,chosenAlternative)\n",
+    "logprob = loglogit(V, av, chosenAlternative)\n",
     "biogeme  = bio.BIOGEME(database,logprob)\n",
     "biogeme.modelName = \"logit_lpmc_model0\"\n",
     "results = biogeme.estimate()\n",
+    "\n",
     "# Get the results in a pandas table\n",
     "pandasResults = results.getEstimatedParameters()\n",
     "print(pandasResults)\n",
