--- a/Math Behavior Project 1/LPMC_model0.ipynb
+++ b/Math Behavior Project 1/LPMC_model0.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os \n",
     "import pandas as pd\n",
     "import biogeme.database as db\n",
     "import biogeme.biogeme as bio\n",
@@ -15,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +64,9 @@
        "      <th>bus_scale</th>\n",
        "      <th>survey_year</th>\n",
        "      <th>...</th>\n",
+       "      <th>dur_pt_access</th>\n",
+       "      <th>dur_pt_rail</th>\n",
+       "      <th>dur_pt_bus</th>\n",
        "      <th>dur_pt_int</th>\n",
        "      <th>pt_interchanges</th>\n",
        "      <th>dur_driving</th>\n",
@@ -70,9 +74,6 @@
        "      <th>cost_driving_fuel</th>\n",
        "      <th>cost_driving_ccharge</th>\n",
        "      <th>driving_traffic_percent</th>\n",
-       "      <th>dur_public</th>\n",
-       "      <th>cost_public</th>\n",
-       "      <th>cost_driving</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -89,6 +90,9 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.0906</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0333</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0319</td>\n",
@@ -96,9 +100,6 @@
        "      <td>0.09</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.124</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -113,6 +114,9 @@
        "      <td>0</td>\n",
        "      <td>3</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.271</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0506</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.08</td>\n",
@@ -120,9 +124,6 @@
        "      <td>0.28</td>\n",
        "      <td>0</td>\n",
        "      <td>0.135</td>\n",
-       "      <td>0.321</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -137,6 +138,9 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.364</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0711</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.153</td>\n",
@@ -144,9 +148,6 @@
        "      <td>0.4</td>\n",
        "      <td>0</td>\n",
        "      <td>0.318</td>\n",
-       "      <td>0.435</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -161,6 +162,9 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.217</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.085</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0858</td>\n",
@@ -168,9 +172,6 @@
        "      <td>0.22</td>\n",
        "      <td>0</td>\n",
        "      <td>0.055</td>\n",
-       "      <td>0.302</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -185,6 +186,9 @@
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "      <td>...</td>\n",
+       "      <td>0.201</td>\n",
+       "      <td>0.417</td>\n",
+       "      <td>0.05</td>\n",
        "      <td>0.1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.853</td>\n",
@@ -192,13 +196,10 @@
        "      <td>2.22</td>\n",
        "      <td>0</td>\n",
        "      <td>0.588</td>\n",
-       "      <td>0.768</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>2.22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
+       "<p>5 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -209,31 +210,31 @@
        "3    13626          2896         0       0            4        2         2   \n",
        "4    76528         16553         2       0            3        5         6   \n",
        "\n",
-       "   faretype  bus_scale  survey_year  ...  dur_pt_int  pt_interchanges  \\\n",
-       "0         5          0            1  ...           0                0   \n",
-       "1         5          0            3  ...           0                0   \n",
-       "2         3          0            2  ...           0                0   \n",
-       "3         1          1            1  ...           0                0   \n",
-       "4         4          1            3  ...         0.1                1   \n",
+       "   faretype  bus_scale  survey_year  ...  dur_pt_access  dur_pt_rail  \\\n",
+       "0         5          0            1  ...         0.0906            0   \n",
+       "1         5          0            3  ...          0.271            0   \n",
+       "2         3          0            2  ...          0.364            0   \n",
+       "3         1          1            1  ...          0.217            0   \n",
+       "4         4          1            3  ...          0.201        0.417   \n",
        "\n",
-       "   dur_driving  cost_transit  cost_driving_fuel  cost_driving_ccharge  \\\n",
-       "0       0.0319             0               0.09                     0   \n",
-       "1         0.08             0               0.28                     0   \n",
-       "2        0.153             0                0.4                     0   \n",
-       "3       0.0858           1.5               0.22                     0   \n",
-       "4        0.853           4.1               2.22                     0   \n",
+       "   dur_pt_bus  dur_pt_int  pt_interchanges  dur_driving  cost_transit  \\\n",
+       "0      0.0333           0                0       0.0319             0   \n",
+       "1      0.0506           0                0         0.08             0   \n",
+       "2      0.0711           0                0        0.153             0   \n",
+       "3       0.085           0                0       0.0858           1.5   \n",
+       "4        0.05         0.1                1        0.853           4.1   \n",
        "\n",
-       "   driving_traffic_percent  dur_public  cost_public  cost_driving  \n",
-       "0                        0       0.124            0          0.09  \n",
-       "1                    0.135       0.321            0          0.28  \n",
-       "2                    0.318       0.435            0           0.4  \n",
-       "3                    0.055       0.302          1.5          0.22  \n",
-       "4                    0.588       0.768          4.1          2.22  \n",
+       "   cost_driving_fuel  cost_driving_ccharge  driving_traffic_percent  \n",
+       "0               0.09                     0                        0  \n",
+       "1               0.28                     0                    0.135  \n",
+       "2                0.4                     0                    0.318  \n",
+       "3               0.22                     0                    0.055  \n",
+       "4               2.22                     0                    0.588  \n",
        "\n",
-       "[5 rows x 35 columns]"
+       "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -257,12 +258,11 @@
        "       'distance', 'dur_walking', 'dur_cycling', 'dur_pt_access',\n",
        "       'dur_pt_rail', 'dur_pt_bus', 'dur_pt_int', 'pt_interchanges',\n",
        "       'dur_driving', 'cost_transit', 'cost_driving_fuel',\n",
-       "       'cost_driving_ccharge', 'driving_traffic_percent', 'dur_public',\n",
-       "       'cost_public', 'cost_driving'],\n",
+       "       'cost_driving_ccharge', 'driving_traffic_percent'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "array([1, 4, 3, 2])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-25T08:58:09.169827Z",
@@ -344,13 +344,14 @@
     "Opt2 = Constant2 + Total_TT * dur_cycling\n",
     "Opt3 = Constant3 + Cost * cost_public + Total_TT * dur_public\n",
     "Opt4 = Constant4 + Cost * cost_driving + Total_TT * dur_driving\n",
+    "\n",
     "V = {1: Opt1, 2: Opt2, 3: Opt3, 4: Opt4}\n",
     "av = {1: 1, 2: 1, 3: 1, 4: 1}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -374,16 +375,25 @@
       "LL(0) =    -6931.472\n",
       "LL(beta) = -4572.870\n",
       "rho bar square = 0.34\n",
-      "Output file: logit_lpmc_model0~00.html\n"
+      "Output file: ./model0/logit_lpmc_model0.html\n"
      ]
     }
    ],
    "source": [
     "# The choice model is a logit, with availability conditions\n",
+    "output_dir = \"./model0\"\n",
+    "filepath = os.path.join(output_dir, \"logit_lpmc_model0\")\n",
+    "if not os.path.exists(filepath):\n",
+    "    os.mkdir(output_dir)\n",
+    "else:\n",
+    "    os.remove(f\"{filepath}.html\")\n",
+    "\n",
     "logprob = loglogit(V, av, chosenAlternative)\n",
     "biogeme  = bio.BIOGEME(database,logprob)\n",
-    "biogeme.modelName = \"logit_lpmc_model0\"\n",
+    "biogeme.modelName = filepath\n",
+    "f = open(biogeme.modelName, \"w\")\n",
     "results = biogeme.estimate()\n",
+    "f.close()\n",
     "\n",
     "# Get the results in a pandas table\n",
     "pandasResults = results.getEstimatedParameters()\n",
@@ -393,6 +403,121 @@
     "print(f\"LL(beta) = {results.data.logLike:.3f}\")\n",
     "print(f\"rho bar square = {results.data.rhoBarSquare:.3g}\")\n",
     "print(f\"Output file: {results.data.htmlFileName}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Std err</th>\n",
+       "      <th>t-test</th>\n",
+       "      <th>p-value</th>\n",
+       "      <th>Rob. Std err</th>\n",
+       "      <th>Rob. t-test</th>\n",
+       "      <th>Rob. p-value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Constant2</th>\n",
+       "      <td>-3.87</td>\n",
+       "      <td>0.103</td>\n",
+       "      <td>-37.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.109</td>\n",
+       "      <td>-35.3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Constant3</th>\n",
+       "      <td>-0.511</td>\n",
+       "      <td>0.053</td>\n",
+       "      <td>-9.65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0546</td>\n",
+       "      <td>-9.36</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Constant4</th>\n",
+       "      <td>-1.27</td>\n",
+       "      <td>0.0738</td>\n",
+       "      <td>-17.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0825</td>\n",
+       "      <td>-15.4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cost</th>\n",
+       "      <td>-0.174</td>\n",
+       "      <td>0.0136</td>\n",
+       "      <td>-12.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.013</td>\n",
+       "      <td>-13.4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Total_TT</th>\n",
+       "      <td>-5.47</td>\n",
+       "      <td>0.183</td>\n",
+       "      <td>-29.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.212</td>\n",
+       "      <td>-25.8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Value  Std err  t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
+       "Constant2  -3.87    0.103   -37.4        0         0.109        -35.3   \n",
+       "Constant3 -0.511    0.053   -9.65        0        0.0546        -9.36   \n",
+       "Constant4  -1.27   0.0738   -17.2        0        0.0825        -15.4   \n",
+       "Cost      -0.174   0.0136   -12.8        0         0.013        -13.4   \n",
+       "Total_TT   -5.47    0.183   -29.8        0         0.212        -25.8   \n",
+       "\n",
+       "           Rob. p-value  \n",
+       "Constant2             0  \n",
+       "Constant3             0  \n",
+       "Constant4             0  \n",
+       "Cost                  0  \n",
+       "Total_TT              0  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pandasResults"
    ]
   },
   {
