--- a/Math Behavior Project 1/LPMC_model1_time.ipynb
+++ b/Math Behavior Project 1/LPMC_model1_time.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-25T08:58:09.169827Z",
@@ -37,7 +37,7 @@
       "LL(0) =    -6931.472\n",
       "LL(beta) = -4273.573\n",
       "rho bar square = 0.382\n",
-      "Output file: logit_lpmc_model1_time.html\n"
+      "Output file: ./model1/logit_lpmc_model1_time.html\n"
      ]
     }
    ],
@@ -46,6 +46,8 @@
     "# 2017\n",
     "# Adapted to PandasBiogeme by Michel Bierlaire\n",
     "# Sun Oct 21 23:15:31 2018\n",
+    "\n",
+    "import os \n",
     "\n",
     "import pandas as pd\n",
     "import biogeme.database as db\n",
@@ -73,15 +75,15 @@
     "#   3  Lower bound\n",
     "#   4  Upper bound\n",
     "#   5  0: estimate the parameter, 1: keep it fixed\n",
-    "Constant1\t = Beta('Constant1',0,None,None,1)\n",
-    "Constant2\t = Beta('Constant2',0,None,None,0)\n",
-    "Constant3\t = Beta('Constant3',0,None,None,0)\n",
-    "Constant4\t = Beta('Constant4',0,None,None,0)\n",
-    "Cost\t = Beta('Cost',0,None,None,0)\n",
-    "Total_TT1\t = Beta('Total_TT1',0,None,None,0)\n",
-    "Total_TT2\t = Beta('Total_TT2',0,None,None,0)\n",
-    "Total_TT3\t = Beta('Total_TT3',0,None,None,0)\n",
-    "Total_TT4\t = Beta('Total_TT4',0,None,None,0)\n",
+    "Constant1 = Beta('Constant1',0,None,None,1)\n",
+    "Constant2 = Beta('Constant2',0,None,None,0)\n",
+    "Constant3 = Beta('Constant3',0,None,None,0)\n",
+    "Constant4 = Beta('Constant4',0,None,None,0)\n",
+    "Cost = Beta('Cost',0,None,None,0)\n",
+    "Total_TT1 = Beta('Total_TT1',0,None,None,0)\n",
+    "Total_TT2 = Beta('Total_TT2',0,None,None,0)\n",
+    "Total_TT3 = Beta('Total_TT3',0,None,None,0)\n",
+    "Total_TT4 = Beta('Total_TT4',0,None,None,0)\n",
     "\n",
     "# Define here arithmetic expressions for name that are not directly\n",
     "# available from the data\n",
@@ -105,10 +107,17 @@
     "V = {1: Opt1,2: Opt2,3: Opt3,4: Opt4}\n",
     "av = {1: 1,2: 1,3: 1,4: 1}\n",
     "\n",
+    "output_dir = \"./model1\"\n",
+    "filepath = os.path.join(output_dir, \"logit_lpmc_model1_time\")\n",
+    "if not os.path.exists(filepath):\n",
+    "    os.mkdir(output_dir)\n",
+    "else:\n",
+    "    os.remove(f\"{filepath}.html\")\n",
+    "    \n",
     "# The choice model is a logit, with availability conditions\n",
     "logprob = loglogit(V,av,chosenAlternative)\n",
     "biogeme  = bio.BIOGEME(database,logprob)\n",
-    "biogeme.modelName = \"logit_lpmc_model1_time\"\n",
+    "biogeme.modelName = filepath\n",
     "results = biogeme.estimate()\n",
     "# Get the results in a pandas table\n",
     "pandasResults = results.getEstimatedParameters()\n",
@@ -137,9 +146,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "biogeme_py_kernel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "biogeme_py_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -151,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.6"
   },
   "varInspector": {
    "cols": {
