--- a/Math Behavior Project 1/LPMC_model2_CarOwn+Card.ipynb
+++ b/Math Behavior Project 1/LPMC_model2_CarOwn+Card.ipynb
@@ -143,9 +143,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "biogeme_py_kernel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "biogeme_py_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.6"
   },
   "varInspector": {
    "cols": {
