--- a/Project-1/LPMC_model0.ipynb
+++ b/Project-1/LPMC_model0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "array([1, 4, 3, 2])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-25T08:58:09.169827Z",
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -375,25 +375,24 @@
       "LL(0) =    -6931.472\n",
       "LL(beta) = -4572.870\n",
       "rho bar square = 0.34\n",
-      "Output file: ./model0/logit_lpmc_model0.html\n"
+      "Output file: ./model0-output/logit_lpmc_model0.html\n"
      ]
     }
    ],
    "source": [
     "# The choice model is a logit, with availability conditions\n",
-    "output_dir = \"./model0\"\n",
+    "output_dir = \"./model0-output\"\n",
     "filepath = os.path.join(output_dir, \"logit_lpmc_model0\")\n",
-    "if not os.path.exists(filepath):\n",
+    "\n",
+    "if not os.path.exists(output_dir):\n",
     "    os.mkdir(output_dir)\n",
-    "else:\n",
+    "if os.path.exists(filepath):\n",
     "    os.remove(f\"{filepath}.html\")\n",
     "\n",
     "logprob = loglogit(V, av, chosenAlternative)\n",
     "biogeme  = bio.BIOGEME(database,logprob)\n",
     "biogeme.modelName = filepath\n",
-    "f = open(biogeme.modelName, \"w\")\n",
     "results = biogeme.estimate()\n",
-    "f.close()\n",
     "\n",
     "# Get the results in a pandas table\n",
     "pandasResults = results.getEstimatedParameters()\n",
@@ -407,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +510,7 @@
        "Total_TT              0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
