--- a/Project-1/LPMC_model1_time.ipynb
+++ b/Project-1/LPMC_model1_time.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-25T08:58:09.169827Z",
@@ -37,7 +37,7 @@
       "LL(0) =    -6931.472\n",
       "LL(beta) = -4273.573\n",
       "rho bar square = 0.382\n",
-      "Output file: ./model1/logit_lpmc_model1_time.html\n"
+      "Output file: ./model1-output/logit_lpmc_model1_time~00.html\n"
      ]
     }
    ],
@@ -107,11 +107,11 @@
     "V = {1: Opt1,2: Opt2,3: Opt3,4: Opt4}\n",
     "av = {1: 1,2: 1,3: 1,4: 1}\n",
     "\n",
-    "output_dir = \"./model1\"\n",
+    "output_dir = \"./model1-output\"\n",
     "filepath = os.path.join(output_dir, \"logit_lpmc_model1_time\")\n",
-    "if not os.path.exists(filepath):\n",
+    "if not os.path.exists(output_dir):\n",
     "    os.mkdir(output_dir)\n",
-    "else:\n",
+    "if os.path.exists(filepath):\n",
     "    os.remove(f\"{filepath}.html\")\n",
     "    \n",
     "# The choice model is a logit, with availability conditions\n",
