--- a/Project-1/LPMC_model3.ipynb
+++ b/Project-1/LPMC_model3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
       "LL(0) =    -6931.472\n",
       "LL(beta) = -4519.228\n",
       "rho bar square = 0.347\n",
-      "Output file: logit_lpmc_model2_DistanceGen~04.html\n"
+      "Output file: ./model3-output/logit_lpmc_model3_Power.html\n"
      ]
     },
     {
@@ -288,15 +288,23 @@
        "Total_TT4             0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "output_dir = \"./model3-output\"\n",
+    "filepath = os.path.join(output_dir, \"logit_lpmc_model3_Power\")\n",
+    "\n",
+    "if not os.path.exists(output_dir):\n",
+    "    os.mkdir(output_dir)\n",
+    "if os.path.exists(filepath):\n",
+    "    os.remove(f\"{filepath}.html\")\n",
+    "\n",
     "logprob = loglogit(V,av,chosenAlternative)\n",
     "biogeme  = bio.BIOGEME(database,logprob)\n",
-    "biogeme.modelName = \"logit_lpmc_model2_DistanceGen\"\n",
+    "biogeme.modelName = filepath\n",
     "results = biogeme.estimate()\n",
     "# Get the results in a pandas table\n",
     "pandasResults = results.getEstimatedParameters()\n",
@@ -332,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +351,7 @@
       "LL(0) =    -6931.472\n",
       "LL(beta) = -4519.228\n",
       "rho bar square = 0.347\n",
-      "Output file: ./model3/logit_lpmc_model3_Box-Cox.html\n"
+      "Output file: ./model3-output/logit_lpmc_model3_Box-Cox.html\n"
      ]
     },
     {
@@ -495,28 +503,26 @@
        "Total_TT4             0  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create new folder for output files (and remove old existing files) \n",
-    "output_dir = \"./model3\"\n",
-    "filepath = \"./model3/logit_lpmc_model3_Box-Cox\"\n",
-    "if not os.path.exists(filepath):\n",
-    "    os.mkdir(output_dir)\n",
-    "else:\n",
-    "    os.remove(f\"{filepath}.html\")\n",
+    "output_dir = \"./model3-output\"\n",
+    "filepath = os.path.join(output_dir, \"logit_lpmc_model3_Box-Cox\")\n",
     "\n",
+    "if not os.path.exists(output_dir):\n",
+    "    os.mkdir(output_dir)\n",
+    "if os.path.exists(filepath):\n",
+    "    os.remove(f\"{filepath}.html\")\n",
     "\n",
     "logprob = loglogit(V,av,chosenAlternative)\n",
     "biogeme  = bio.BIOGEME(database,logprob)\n",
     "\n",
     "biogeme.modelName = filepath\n",
-    "f = open(filepath, \"w\")\n",
     "results = biogeme.estimate()\n",
-    "f.close()\n",
     "\n",
     "# Get the results in a pandas table\n",
     "pandasResults = results.getEstimatedParameters()\n",
