--- a/Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
+++ b/Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "\n",
     "\n",
     "# socio-economic factors (interacting with CarOwn)\n",
-    "CarOwn_Female = Beta('Dist_Female', 0, None, None, 0)\n",
+    "CarOwn_Time = Beta('CarOwn_Female', 0, None, None, 0)\n",
     "CarOwn_Age = Beta('Dist_Age', 0, None, None, 0)"
    ]
   },
