--- a/Project-1/LPMC_model2_CarOwn+SocioEconWithDistance.ipynb
+++ b/Project-1/LPMC_model2_CarOwn+SocioEconWithDistance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +57,13 @@
     "\n",
     "\n",
     "# socio-economic factors (interacting with CarOwn)\n",
-    "CarOwn_Female = Beta('CarOwn_Female', 0, None, None, 0)\n",
-    "CarOwn_Age = Beta('CarOwn_Age', 0, None, None, 0)"
+    "CarOwn_Female = Beta('Dist_Female', 0, None, None, 0)\n",
+    "CarOwn_Age = Beta('Dist_Age', 0, None, None, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,191 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-25T08:58:09.169827Z",
      "start_time": "2020-09-25T08:57:59.030134Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nbr of observations: 5000\n",
-      "LL(0) =    -6931.472\n",
-      "LL(beta) = -3786.604\n",
-      "rho bar square = 0.452\n",
-      "Output file: ./model2-output/logit_lpmc_model2_CarOwn+Gender~01.html\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Value</th>\n",
-       "      <th>Std err</th>\n",
-       "      <th>t-test</th>\n",
-       "      <th>p-value</th>\n",
-       "      <th>Rob. Std err</th>\n",
-       "      <th>Rob. t-test</th>\n",
-       "      <th>Rob. p-value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>CarOwn</th>\n",
-       "      <td>1.48</td>\n",
-       "      <td>0.0533</td>\n",
-       "      <td>27.9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0517</td>\n",
-       "      <td>28.7</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CarOwn_Female</th>\n",
-       "      <td>1.83e-05</td>\n",
-       "      <td>2.28e+03</td>\n",
-       "      <td>8.01e-09</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.236</td>\n",
-       "      <td>7.75e-05</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Constant2</th>\n",
-       "      <td>-4.64</td>\n",
-       "      <td>0.175</td>\n",
-       "      <td>-26.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.225</td>\n",
-       "      <td>-20.7</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Constant3</th>\n",
-       "      <td>-2.36</td>\n",
-       "      <td>0.119</td>\n",
-       "      <td>-19.9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>-14.8</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Constant4</th>\n",
-       "      <td>-3.46</td>\n",
-       "      <td>0.128</td>\n",
-       "      <td>-26.9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.173</td>\n",
-       "      <td>-19.9</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cost</th>\n",
-       "      <td>-0.159</td>\n",
-       "      <td>0.0163</td>\n",
-       "      <td>-9.75</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0166</td>\n",
-       "      <td>-9.61</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Total_TT1</th>\n",
-       "      <td>-8.21</td>\n",
-       "      <td>0.303</td>\n",
-       "      <td>-27.1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.481</td>\n",
-       "      <td>-17.1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Total_TT2</th>\n",
-       "      <td>-5.67</td>\n",
-       "      <td>0.453</td>\n",
-       "      <td>-12.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.523</td>\n",
-       "      <td>-10.9</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Total_TT3</th>\n",
-       "      <td>-3.33</td>\n",
-       "      <td>0.251</td>\n",
-       "      <td>-13.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.254</td>\n",
-       "      <td>-13.1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Total_TT4</th>\n",
-       "      <td>-6.16</td>\n",
-       "      <td>0.345</td>\n",
-       "      <td>-17.8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.382</td>\n",
-       "      <td>-16.1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Value  Std err   t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
-       "CarOwn            1.48   0.0533     27.9        0        0.0517         28.7   \n",
-       "CarOwn_Female 1.83e-05 2.28e+03 8.01e-09        1         0.236     7.75e-05   \n",
-       "Constant2        -4.64    0.175    -26.5        0         0.225        -20.7   \n",
-       "Constant3        -2.36    0.119    -19.9        0          0.16        -14.8   \n",
-       "Constant4        -3.46    0.128    -26.9        0         0.173        -19.9   \n",
-       "Cost            -0.159   0.0163    -9.75        0        0.0166        -9.61   \n",
-       "Total_TT1        -8.21    0.303    -27.1        0         0.481        -17.1   \n",
-       "Total_TT2        -5.67    0.453    -12.5        0         0.523        -10.9   \n",
-       "Total_TT3        -3.33    0.251    -13.3        0         0.254        -13.1   \n",
-       "Total_TT4        -6.16    0.345    -17.8        0         0.382        -16.1   \n",
-       "\n",
-       "               Rob. p-value  \n",
-       "CarOwn                    0  \n",
-       "CarOwn_Female             1  \n",
-       "Constant2                 0  \n",
-       "Constant3                 0  \n",
-       "Constant4                 0  \n",
-       "Cost                      0  \n",
-       "Total_TT1                 0  \n",
-       "Total_TT2                 0  \n",
-       "Total_TT3                 0  \n",
-       "Total_TT4                 0  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "output_dir = \"./model2-output\"\n",
     "filepath = os.path.join(output_dir, \"logit_lpmc_model2_CarOwn+Gender\")\n",
@@ -327,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,186 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nbr of observations: 5000\n",
-      "LL(0) =    -6931.472\n",
-      "LL(beta) = -3786.604\n",
-      "rho bar square = 0.452\n",
-      "Output file: ./model2-output/logit_lpmc_model2_CarOwn+Age~00.html\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Value</th>\n",
-       "      <th>Std err</th>\n",
-       "      <th>t-test</th>\n",
-       "      <th>p-value</th>\n",
-       "      <th>Rob. Std err</th>\n",
-       "      <th>Rob. t-test</th>\n",
-       "      <th>Rob. p-value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>CarOwn</th>\n",
-       "      <td>1.48</td>\n",
-       "      <td>0.0533</td>\n",
-       "      <td>27.9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0517</td>\n",
-       "      <td>28.7</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CarOwn_Age</th>\n",
-       "      <td>-2.92e-06</td>\n",
-       "      <td>18.3</td>\n",
-       "      <td>-1.59e-07</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.000868</td>\n",
-       "      <td>-0.00336</td>\n",
-       "      <td>0.997</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Constant2</th>\n",
-       "      <td>-4.64</td>\n",
-       "      <td>0.175</td>\n",
-       "      <td>-26.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.225</td>\n",
-       "      <td>-20.7</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Constant3</th>\n",
-       "      <td>-2.36</td>\n",
-       "      <td>0.119</td>\n",
-       "      <td>-19.9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>-14.8</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Constant4</th>\n",
-       "      <td>-3.46</td>\n",
-       "      <td>0.128</td>\n",
-       "      <td>-26.9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.173</td>\n",
-       "      <td>-19.9</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Cost</th>\n",
-       "      <td>-0.159</td>\n",
-       "      <td>0.0163</td>\n",
-       "      <td>-9.75</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0166</td>\n",
-       "      <td>-9.61</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Total_TT1</th>\n",
-       "      <td>-8.21</td>\n",
-       "      <td>0.303</td>\n",
-       "      <td>-27.1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.481</td>\n",
-       "      <td>-17.1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Total_TT2</th>\n",
-       "      <td>-5.67</td>\n",
-       "      <td>0.453</td>\n",
-       "      <td>-12.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.523</td>\n",
-       "      <td>-10.9</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Total_TT3</th>\n",
-       "      <td>-3.33</td>\n",
-       "      <td>0.251</td>\n",
-       "      <td>-13.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.254</td>\n",
-       "      <td>-13.1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Total_TT4</th>\n",
-       "      <td>-6.16</td>\n",
-       "      <td>0.345</td>\n",
-       "      <td>-17.8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.382</td>\n",
-       "      <td>-16.1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Value  Std err    t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
-       "CarOwn          1.48   0.0533      27.9        0        0.0517         28.7   \n",
-       "CarOwn_Age -2.92e-06     18.3 -1.59e-07        1      0.000868     -0.00336   \n",
-       "Constant2      -4.64    0.175     -26.5        0         0.225        -20.7   \n",
-       "Constant3      -2.36    0.119     -19.9        0          0.16        -14.8   \n",
-       "Constant4      -3.46    0.128     -26.9        0         0.173        -19.9   \n",
-       "Cost          -0.159   0.0163     -9.75        0        0.0166        -9.61   \n",
-       "Total_TT1      -8.21    0.303     -27.1        0         0.481        -17.1   \n",
-       "Total_TT2      -5.67    0.453     -12.5        0         0.523        -10.9   \n",
-       "Total_TT3      -3.33    0.251     -13.3        0         0.254        -13.1   \n",
-       "Total_TT4      -6.16    0.345     -17.8        0         0.382        -16.1   \n",
-       "\n",
-       "            Rob. p-value  \n",
-       "CarOwn                 0  \n",
-       "CarOwn_Age         0.997  \n",
-       "Constant2              0  \n",
-       "Constant3              0  \n",
-       "Constant4              0  \n",
-       "Cost                   0  \n",
-       "Total_TT1              0  \n",
-       "Total_TT2              0  \n",
-       "Total_TT3              0  \n",
-       "Total_TT4              0  "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "output_dir = \"./model2-output\"\n",
     "filepath = os.path.join(output_dir, \"logit_lpmc_model2_CarOwn+Age\")\n",
